results/d160e7abe42ae700573821b747207587/err_code.txt
Traceback (most recent call last):
  File "./pyfile.py", line 15, in <module>
    from theonlinemcmc import MCMCWrapper
  File "/usr/local/lib/python2.7/dist-packages/theonlinemcmc/MCMCWrapper.py", line 68
    abscissastringquotes = "'%s'"abscissastring
                                              ^
SyntaxError: invalid syntax
